--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 streamlit==1.29.0
+fastapi==0.103.2
+uvicorn==0.23.2
+
 pandas==2.0.3
 numpy==1.24.3
+scikit-learn==1.3.2
+joblib==1.3.2
+
+tensorflow-cpu==2.13.0
+requests==2.31.0
